# deepl2api

./: .env.example  .gitignore  API.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
